feat: add MathStatisticsDemo